test/test11.boa
// no

class foo:

	constructor(int x):
		return

extern int main():
	new foo		// error: missing constructor-argument
	return 0

